Fixed about me spacing issue and changed color scheme

--- a/style.css
+++ b/style.css
@@ -5,12 +5,16 @@
     margin: 0;
     padding: 0;
 }
+.body{
+    position: absolute;
+    top:100%;
+}
 .HeaderSection{
     font-family: Nunito;
     height: 50vh;
-    flex-direction: column;
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
     margin-bottom: 28vh;
 }
@@ -24,32 +28,34 @@
     font-size: 6em;
 }
 .TopLayout{
-    text-align: right;
-    margin-right: 3em;
-    margin-top: 2em;
     height: 20vh;
+    margin-right: 3%;
+    margin-top: 2%;
+    text-align: right;
 }
 .TopLinks{
     font-family: Nunito;
     font-size: 1.5em;
-    padding-left: 2em;
+    color:black;
+    padding-left: 2%;
     display: inline-block;
     text-decoration: none;
-    color:black;
 }
 .BackgroundBox{
-    background-color: black;
-    height: 100vh;
     width: 100%;
+    height: 100%;
+    background-color: rgb(63, 63, 63);
+    position: absolute;
+
 }
 .AboutMe{
+    height: 40%;
     font-family: Nunito;
-    height: 40vh;
-    flex-direction: column;
     display: flex;
-    align-items: center;
-    justify-content: center;
     text-align: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 a:link{
     color:black;
